@@ -20,31 +20,33 @@
 
 #include <sandix/sched.h>
 
-#define INIT_MM(mm) {						\
-								\
+#define INIT_MM(mm) {							\
+	.mm_users	= ATOMIC_INIT(2),				\
+	.mm_count	= ATOMIC_INIT(1),				\
+	.page_table_lock= __SPIN_LOCK_UNLOCKED(mm.page_table_lock)	\
 }
 
-#define INIT_TASK(task)						\
-{								\
-	.state		= 0,					\
-	.stack		= &init_thread_info,			\
-	.usage		= ATOMIC_INIT(2),			\
-	.flags		= PF_KTHREAD,				\
-	.prio		= MAX_PRIO-20,				\
-	.static_prio	= MAX_PRIO-20,				\
-	.normal_prio	= MAX_PRIO-20,				\
-	.policy		= SCHED_NORMAL,				\
-	.nr_cpus_allowed= NR_CPUS,				\
-	.tasks		= LIST_HEAD_INIT(task.tasks),		\
-	.mm		= NULL,					\
-	.active_mm	= &init_mm,				\
-	.alloc_lock	= __SPIN_LOCK_UNLOCKED(task.alloc_lock),\
-	.real_parent	= &task,				\
-	.parent		= &task,				\
-	.children	= LIST_HEAD_INIT(task.children),	\
-	.sibling	= LIST_HEAD_INIT(task.sibling),		\
-	.group_leader	= &task,				\
-	.thread		= INIT_THREAD,				\
+#define INIT_TASK(task)							\
+{									\
+	.state		= 0,						\
+	.stack		= &init_thread_info,				\
+	.usage		= ATOMIC_INIT(2),				\
+	.flags		= PF_KTHREAD,					\
+	.prio		= MAX_PRIO-20,					\
+	.static_prio	= MAX_PRIO-20,					\
+	.normal_prio	= MAX_PRIO-20,					\
+	.policy		= SCHED_NORMAL,					\
+	.nr_cpus_allowed= NR_CPUS,					\
+	.tasks		= LIST_HEAD_INIT(task.tasks),			\
+	.mm		= NULL,						\
+	.active_mm	= &init_mm,					\
+	.alloc_lock	= __SPIN_LOCK_UNLOCKED(task.alloc_lock),	\
+	.real_parent	= &task,					\
+	.parent		= &task,					\
+	.children	= LIST_HEAD_INIT(task.children),		\
+	.sibling	= LIST_HEAD_INIT(task.sibling),			\
+	.group_leader	= &task,					\
+	.thread		= INIT_THREAD,					\
 }
 
 struct mm_struct   init_mm		= INIT_MM(init_mm);
